[package]
name = "atomic-utils"
description = "Various atomic utils"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Aandreba/atomic-utils"
keywords = ["atomic", "parallel", "thread", "async"]
categories = ["no-std", "asynchronous", "concurrency", "rust-patterns"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["alloc", "crossbeam/std", "bytemuck/extern_crate_std", "num-traits/std"]
alloc = ["crossbeam/alloc", "bytemuck/extern_crate_alloc"]
const = []

[dependencies]
cfg-if = "1"
crossbeam = { version = "0.8.2", default-features = false }
bytemuck = { version = "1.11.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]